syntax = "proto3";
package icademo.txdemo;

option go_package = "github.com/ThanhNhann/icademo/x/txdemo/types";

import "gogoproto/gogo.proto";
import "cosmos/msg/v1/msg.proto";
import "google/protobuf/any.proto";
import "cosmos_proto/cosmos.proto";


// Msg defines the Msg service.
service Msg {
    // RegisterAccount defines a rpc handler for MsgRegisterAccount
    rpc RegisterAccount(MsgRegisterAccount) returns (MsgRegisterAccountResponse);
    // SubmitTx defines a rpc handler for MsgSubmitTx
    rpc SubmitTx(MsgSubmitTx) returns (MsgSubmitTxResponse);
    rpc RegisterHostZone(MsgRegisterHostZone)
    returns (MsgRegisterHostZoneResponse);
}


// MsgRegisterAccount defines the payload for Msg/RegisterAccount
message MsgRegisterAccount {
    option (gogoproto.equal)           = false;
    option (gogoproto.goproto_getters) = false;
  
    string owner         = 1;
    string connection_id = 2 [(gogoproto.moretags) = "yaml:\"connection_id\""];
    string version       = 3;
}

// MsgRegisterAccountResponse defines the response for Msg/RegisterAccount
message MsgRegisterAccountResponse {}

// MsgSubmitTx defines the payload for Msg/SubmitTx
message MsgSubmitTx {
    option (gogoproto.equal)           = false;
    option (gogoproto.goproto_getters) = false;
  
    string              owner         = 1;
    string              connection_id = 2 [(gogoproto.moretags) = "yaml:\"connection_id\""];
    google.protobuf.Any msg           = 3;
}
  
// MsgSubmitTxResponse defines the response for Msg/SubmitTx
message MsgSubmitTxResponse {}

// MsgRegisterHostZone defines the payload for Msg/RegisterHostZone
message MsgRegisterHostZone {
    option (cosmos.msg.v1.signer) = "creator";
    option (gogoproto.equal) = false;
    option (gogoproto.goproto_getters) = false;

    string connection_id = 1 [ (gogoproto.moretags) = "yaml:\"connection_id\"" ];
    string bech32prefix = 2;
    string host_denom = 3 [ (gogoproto.moretags) = "yaml:\"host_denom\"" ];
    string ibc_denom = 4 [ (gogoproto.moretags) = "yaml:\"ibc_denom\"" ];
    string creator = 5 [ (cosmos_proto.scalar) = "cosmos.AddressString" ];
    string transfer_channel_id = 6
        [ (gogoproto.moretags) = "yaml:\"transfer_channel_id\"" ];
    uint64 unbonding_period = 7
        [ (gogoproto.moretags) = "yaml:\"unbonding_period\"" ];
    uint64 max_messages_per_ica_tx = 8;
}

// MsgRegisterHostZoneResponse defines the response for Msg/RegisterHostZone
message MsgRegisterHostZoneResponse {}
